Fixed width overflowing screen

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
   margin: 0;
   padding: 0;
 
